-
Bug
-
Resolution: Done
-
P1: Critical
-
6.2.0 Beta1
-
None
-
-
a199c508b82644fddfbf9a2b3c7e03433e81bc5d (qt/qtmultimedia/dev) 0b34747ceb7502393c8a39134c9463664dc326a7 (qt/qtmultimedia/6.2)
My guess is that the downloadable mingw build from the qt installer is not build with the qt feature wmf.
Thus the creation of the platform integration in qplatformmediaintegration.cpp defaults to the QDummyIntegration implementation.
Since those functions returns nullptr for devices() any Qt-Multimedia example/application compiled with mingw crashes when trying to create an audio device.
- is duplicated by
-
QTBUG-95233 Windows mingw version asserts during acces to QMediaDevices
-
- Closed
-
-
QTBUG-95802 QAudioOutput crashes app when its constructor is called
-
- Closed
-
| For Gerrit Dashboard: QTBUG-95234 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 371022,4 | Fail early on unsupported platform/compiler | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 371441,2 | Fail early on unsupported platform/compiler | 6.2 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 371443,2 | Fail early on unsupported platform/compiler | 6.2.0 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 372943,2 | Add support for building WMF backend with MinGW 9.0.0 | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 373133,2 | Add support for building WMF backend with MinGW 9.0.0 | 6.2 | qt/qtmultimedia | Status: MERGED | +2 | 0 |